--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
 }
 
 #span{
@@ -101,6 +102,12 @@ body{
   #head{
         display: flex;
        font-size: 20px;
+       flex-wrap: wrap;
+       white-space: nowrap;
+       text-align: center;
+       justify-content: center;
+       position: relative;
+       top: 30px;
     }
 
     #navbarcollapse2{
@@ -109,6 +116,12 @@ body{
 
     #news{
         display: none;
+    }
+
+    .navbar22{
+        position: relative;
+        left: 13px;
+        bottom: 20px;
     }
 }
 
@@ -189,6 +202,7 @@ body{
     font-weight: normal;
 }
 
+
 @media (max-width: 768px) {
     .dropdown-menu {
         display: flex !important;
@@ -215,6 +229,7 @@ body{
 
 #navbar2{
     background-color: blue;
+    height: 30px;
 
 }
 
@@ -308,7 +323,7 @@ body{
 .page-header {
     padding-top: 12rem;
     padding-bottom: 6rem;
-    background: linear-gradient(rgba(24, 10, 150, 0.8), rgba(6, 68, 202, 0.8)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(24, 10, 150, 0.8), rgba(6, 68, 202, 0.8)), url(../img/RDM_4013.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -547,6 +562,7 @@ body{
     font-weight: normal;
     text-transform: capitalize;
     transition: .3s;
+    
 }
 
 .footer .btn.btn-link::before {
@@ -588,7 +604,6 @@ body{
 .footer .copyright a:hover {
     color: var(--primary);
 }
-
 
 #link {
     position: relative; /* Ensures the z-index works */
